# xmlesc

./: .gitignore  CMakeLists.txt  README.md  esc_codes.cpp  package.json
app/: CMakeLists.txt  html_esc.cpp  main.cpp
include/: esc_codes.h  utf8_utils.h
include/html_ent/: esc_codes.h  html_ent.h
include/utf8_utils/: utf8_utils.h
scripts/: escape_codes.json  mapmaker.js
src/: CMakeLists.txt  utf8_utils.cpp
src/html_ent/: esc_codes.cpp  html_ent.cpp
tests/: CMakeLists.txt  num_utf8_bytes_tests.cpp  parse_utf8_codepoint_tests.cpp
